--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
