--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
